resize image to a fixed height of 300px. Add gap and padding to the various header components

--- a/style.css
+++ b/style.css
@@ -101,3 +101,14 @@ a:hover
 {
     gap: 20px;
 }
+
+.horizontal.leftRightPadding.gaps
+{
+    gap: 30px;
+    padding-bottom: 4%;
+}
+
+.horizontal.leftRightPadding.gaps .vertical
+{
+    gap: 10px;
+}
